# AppQRScan

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: __init__.py  callback_point.py
core/: RabbitInterface.py  settings.py
infra/: rabbit_depends.py  rabbit_publisher.py
templates/: main.html
views/: __init__.py  main_view.py
