[tool.poetry]
name = "miniappqr"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
jinja2 = "^3.1.6"
pydantic-settings = "^2.8.1"
aio-pika = "^9.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
